begin the implementation of member module

--- a/12306ng-web-customer-transaction/pom.xml
+++ b/12306ng-web-customer-transaction/pom.xml
@@ -410,7 +410,8 @@
 						</systemProperty>						
 					</systemProperties>
 					<useTestClasspath>true</useTestClasspath>
-				
+					<reload>automatic</reload>
+					<scanIntervalSeconds>2</scanIntervalSeconds>
 					<webAppConfig>
 						<contextPath>/ngweb</contextPath>
 					</webAppConfig>
